# pylon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  MakeFile  README.md  clippy.toml  pylon-config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  dependencies.yml  release.yml  security.yml
crates/pylon-core/: Cargo.toml
crates/srn-node/: Cargo.toml  peers.example.toml  prove-network.sh  srn-node-quickstart.sh
crates/srn-node/src/: api.rs  coords.rs  expression.rs  label.rs  lib.rs  main.rs  node.rs  peers.rs  propagation.rs  registry.rs  scheduler.rs
demo/: FIXES_APPLIED.md  QUICKSTART.md  README.md  requirements.txt  run_demo.py  run_simple_demo.py  setup_demo.py  test_components.py  test_dataclass_fix.py  test_fixed.py
demo/config/: atomic_clock_config.json  network_topology.json  simulation_params.json
demo/experiment_results/sango_exp_1758439896/: comprehensive_analysis.json
demo/experiment_results/sango_exp_1758444315/: comprehensive_analysis.json
demo/experiment_results/sango_exp_1758486130/: comprehensive_analysis.json
demo/src/: __init__.py  atomic_clock.py  computer_interaction_simulator.py  custom_server.py  data_collector.py  data_storage.py  integration.py  json_data_storage.py  map_visualisation.py  mimo_router.py  modern_web_simulator.py  network_requests.py  network_simulator.py  precision_calculator.py  simiplified_visualisation.py  state_predictor.py  temporal_fragmenter.py  web_browser_simulator.py
demo/visualization/: __init__.py  network_visualizer.py  performance_dashboard.py
docs/: the-origins-of-economic-processes.tex
docs/algorithms/: buhera-east.tex  buhera-north.tex  bulawayo-algorithm.tex  harare-algorithm.tex  kinshasa-algorithm.tex  mufakose-algorithm.tex  self-aware-algorithms.tex
docs/bit-rot/: oscillatory-network.tex
docs/foundation/: autonomous-vehicle.tex  blood-vessel.tex  economic.tex  individual.tex  jungfernstieg.tex  monkey-tail.tex  mzekezeke.tex  sango-rine-shumba.tex  state-currency.tex  unified-monitary-theory.tex  virtual-blood.tex  virtual-machine.tex
docs/implementation/: algorithms.md  autonomous-vehicle.md  economic-convergence.md  individual.md  pylon-diagrams.md  sango-rine-shumba.md  security-assets.md
docs/publication/: diagrams.md  encryption.tex  equivalence-diagrams.md  equivalence-mechanisms.tex  monkey-tail.tex  reality-state-currency-system.tex  resource-allocation.tex  st-stellas-constant.tex  st-stellas-proof.tex  supplementary-material.md
infra/: docker-compose.yml  setup-chromebook.sh
infra/collector/: fritz_collector.py  requirements.txt
infra/prometheus/: prometheus.yml
panthera/: next.config.js  package.json  vercel.json
panthera/docs/: bioreactor-control.tex  bioreactor-monitoring.tex  buhera-pylon.md  german-rail-network-yield.aux  german-rail-network-yield.fdb_latexmk  german-rail-network-yield.fls  german-rail-network-yield.toc  integration-instructions.md  scheduling-mechanism.tex
panthera/docs/federated-understanding/: federated-multi-modal-understanding.tex  references.bib
panthera/docs/network-yield-computing-allocation/: network-yield-computing-allocation.aux  network-yield-computing-allocation.bbl  network-yield-computing-allocation.blg  network-yield-computing-allocation.fdb_latexmk  network-yield-computing-allocation.fls  network-yield-computing-allocation.out  network-yield-computing-allocation.tex  network-yield-computing-allocation.toc  references.bib
panthera/docs/sango-rine-shumba-expression-language/: generate_panels.py  references.bib  srn-captions.tex  srn-expression-transmission-protocol.tex  validate_srn_paper.py  validation_results.json
panthera/docs/sources/: backward-trajectory-completion.tex  gas-computing.tex  instatiation-of-finite-weighted-graphs.tex  irreducible-bounded-phase-residue.tex  single-particle.tex  temporal-programming.tex  trajectory-computing.tex
panthera/docs/virtual-machine-syntax/: distributed-virtual-machine-computing.tex  references.bib
panthera/publication/sango-rine-shumba-state/: references.bib  sango-rine-shumba-network-state.aux  sango-rine-shumba-network-state.bbl  sango-rine-shumba-network-state.blg  sango-rine-shumba-network-state.out  sango-rine-shumba-network-state.tex
panthera/publication/sango-rine-shumba-trajectory/: references.bib  sango-rine-shumba-trajectory-completion.aux  (+4 more)
publication/precision-by-difference/: precision-by-difference-propagation-network.tex  theory.tex
sango_rine_shumba/: INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
sango_rine_shumba/docs/: sango-rine-shumba-network.aux  sango-rine-shumba-network.fdb_latexmk  sango-rine-shumba-network.fls  sango-rine-shumba-network.out
sango_rine_shumba/src/: simulation.py
sango_rine_shumba/src/network/: ambigous_compressor.py  hierarchical_navigator.py  network_metrics.py  semantic_displacement.py
sango_rine_shumba/src/observer/: finite_observer.py  gear_ratio_calculator.py  observer_metrics.py  oscillatory_hierarchy.py  transcendent_observer.py
sango_rine_shumba/src/signal/: __init__.py  hardware_signals.py  network_signals.py  signal_metrics.py
src/: config.rs  errors.rs  lib.rs  main.rs  types.rs
src/algorithms/: buhera_east.rs  buhera_north.rs  bulawayo.rs  coordinator.rs  harare.rs  kinshasa.rs  mod.rs  mufakose.rs  self_aware.rs
src/cables/: individual.rs  mod.rs  network.rs  spatial.rs
src/coordination/: coordinator.rs  engine.rs  mod.rs  network.rs
src/core/: coordination_math.rs  fragment.rs  mod.rs  precision.rs  reference.rs
src/security_assets/: coordinator.rs  currency.rs  environmental.rs  mdtec.rs  mod.rs
src/temporal_economic/: convergence.rs  coordinator.rs  fragments.rs  mod.rs
ts/: package.json  tsconfig.json  tsconfig.test.json
ts/src/: agent.ts  cluster.ts  coords.ts  errors.ts  index.ts  kuramoto.ts  label.ts  market.ts  node.ts  registry.ts  scheduler.ts
ts/test/: agent.test.ts  api-surface.test.ts  cluster.test.ts  coords.test.ts  market.test.ts  node.test.ts  srn.test.ts  trajectory.test.ts
(+187 files in other folders)
