[package]
name = "pylon-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Pylon core coordination library"

[lib]
name = "pylon"
path = "../../src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
tracing = { version = "0.1", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
toml = "0.8"

[workspace]
