[package]
name = "srn-node"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Sango Rine Shumba — single-node SRN runtime with residue-driven scheduler"

[[bin]]
name = "srn-node"
path = "src/main.rs"

[lib]
name = "srn_node"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive", "env"] }
axum = { version = "0.7" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }

[workspace]

